parser/tests/Delete.test
# This file copyright (c) 2011-2015, Quickstep Technologies LLC.
# All rights reserved.
# See file CREDITS.txt for details.

delete from test where tb1=1
--
DeleteStatement[relation_name=test]
+-where_predicate=Equal
  +-left_operand=AttributeReference[attribute_name=tb1]
  +-right_operand=Literal
    +-NumericLiteral[numeric_string=1,float_like=false]
==

delete from test
--
DeleteStatement[relation_name=test]
==

delete from table
--
ERROR: syntax error (1 : 13)
delete from table
            ^
==

delete from table test
--
ERROR: syntax error (1 : 13)
delete from table test
            ^
==

delete from test1, test2
--
ERROR: syntax error (1 : 18)
delete from test1, test2
                 ^
